--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>Tel: <a href="+2349169895904" alt="Phone Number"> +234-9169895904</a></p>
+<p>Email: <a href="nuelroyce@gmail.com" alt="Email">nuelroyce@gmail.com</a> </p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  Someplace in Crown Estate,<br />
+  Lagos,<br />
+  Nigeria. <br />
 </p>
